Additions:

Changes:
Updated to use Fireplace Lib 4.0.0

Fixes/Internal Changes: