@@ -7,5 +7,6 @@
   "gui.textbook.export.dialog_title": "Export to text file",
   "gui.textbook.volume_confirm": "Select Volume %s of %s.",
   "gui.textbook.volume_up": "Volume Number Up",
-  "gui.textbook.volume_down": "Volume Number Down"
+  "gui.textbook.volume_down": "Volume Number Down",
+  "gui.textbook.export.preserve_whitespace": "Preserve Whitespace"
 }
